--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,4 +1,4 @@
-name: Build APK
+Mname: Build APK
 
 on:
   push:
@@ -46,5 +46,5 @@ jobs:
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: HondaInsight-Debug
+        name: HONDAe2MQTT-v${{ github.run_number }}
         path: app/build/outputs/apk/debug/app-debug.apk
